--- a/stack.yaml
+++ b/stack.yaml
@@ -41,6 +41,8 @@ packages:
 ghc-options:
   "$everything": -haddock
 
+allow-newer: true
+
 extra-deps:
 - Cabal-syntax-3.10.1.0@sha256:bb835ebab577fd0f9c11dab96210dbb8d68ffc62652576f4b092563c345930e7,7434
 # - floskell-0.10.7
