--- a/stack.yaml
+++ b/stack.yaml
@@ -41,6 +41,8 @@ packages:
 ghc-options:
   "$everything": -haddock
 
+allow-newer: true
+
 extra-deps:
 - Cabal-syntax-3.10.1.0@sha256:bb835ebab577fd0f9c11dab96210dbb8d68ffc62652576f4b092563c345930e7,7434
 # - floskell-0.10.7
@@ -53,6 +55,10 @@ extra-deps:
 - hw-fingertree-0.1.2.1
 - hw-prim-0.6.3.2
 - ansi-terminal-0.11.5
+- lsp-2.1.0.0@sha256:ef6fc28eac6dc27672cd8471c9f83f14de646a9c1fcaf993a451d2ae4de274e8,3533
+- lsp-test-0.15.0.1@sha256:31e3a9969706dbdf6713c2dec4cad02efd9a3d75bf9b26c95cb442535aeaf998,3822
+- lsp-types-2.0.1.0@sha256:70a822473de72c165495c2eed00f4c2a728f7fe1e6d7d8b4709d474a41860940,29317
+
 
 configure-options:
   ghcide:
