--- a/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
+++ b/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
@@ -19,6 +19,11 @@ source-repository head
   type:     git
   location: https://github.com/haskell/haskell-language-server
 
+flag pedantic
+  description: Enable -Werror
+  default:     False
+  manual:      True
+
 common warnings
     ghc-options: -Wall
 
@@ -40,9 +45,13 @@ library
       , ghc-boot-th
       , unordered-containers
       , containers
+      , aeson
     hs-source-dirs:   src
     default-language: Haskell2010
 
+  if flag(pedantic)
+    ghc-options: -Werror
+    
 test-suite tests
     import:           warnings
     default-language: Haskell2010
