--- a/.github/actions/setup-build/action.yml
+++ b/.github/actions/setup-build/action.yml
@@ -7,7 +7,7 @@ inputs:
   cabal:
     description: "Cabal version"
     required: false
-    default: "3.8.1.0"
+    default: "head"
   os:
     description: "Operating system: Linux, Windows or macOS"
     required: true
@@ -31,7 +31,7 @@ runs:
         sudo chown -R $USER /usr/local/.ghcup
       shell: bash
 
-    - uses: haskell/actions/setup@v2.4.7
+    - uses: haskell-actions/setup@v2.5.0
       id: HaskEnvSetup
       with:
         ghc-version  : ${{ inputs.ghc   }}
