--- a/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
+++ b/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
@@ -34,6 +34,7 @@ library
     -- other-extensions:
     build-depends:
       , base                  >=4.12 && <5
+      , ghc
       , ghcide                == 2.1.0.0
       , hls-plugin-api        == 2.1.0.0
       , lsp
