Add new hiedb to stack.yaml

--- a/stack.yaml
+++ b/stack.yaml
@@ -43,7 +43,9 @@ allow-newer: true
 extra-deps:
 - Cabal-syntax-3.10.1.0@sha256:bb835ebab577fd0f9c11dab96210dbb8d68ffc62652576f4b092563c345930e7,7434
 # - floskell-0.10.7
-- hiedb-0.4.3.0
+# - hiedb-0.4.3.0
+- git: https://github.com/nlander/HieDb.git
+  commit: 4eebfcf8fab54f24808e6301227d77ae64d2509c
 - implicit-hie-0.1.2.7
 - implicit-hie-cradle-0.5.0.1
 - algebraic-graphs-0.6.1
