revert temporary flags workflow changes

--- a/.github/workflows/flags.yml
+++ b/.github/workflows/flags.yml
@@ -47,7 +47,7 @@ jobs:
     needs: pre_job
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         ghc: ${{ fromJSON(needs.pre_job.outputs.ghcs) }}
         os:
@@ -75,7 +75,9 @@ jobs:
       - name: Build `ghcide` with flags
         run: cabal v2-build ghcide --flags="ghc-patched-unboxed-bytecode test-exe executable bench-exe ekg"
 
-      - name: Build with pedantic (-WError)
+      # wingman fails with flags on 9.0, so this can be removed when that's gone
+      - if: matrix.ghc != '9.0'
+        name: Build with pedantic (-WError)
         run: cabal v2-build --flags="pedantic"
 
   flags_post_job:
