--- a/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
+++ b/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
@@ -38,8 +38,10 @@ library
     , lens
     , lsp
     , mtl
+    , process-extras  >= 0.7.1
     , ormolu          ^>=0.1.2 || ^>= 0.2 || ^>= 0.3 || ^>= 0.5 || ^>= 0.6 || ^>= 0.7
     , text
+    , transformers
 
   default-language: Haskell2010
 
@@ -51,10 +53,15 @@ test-suite tests
   hs-source-dirs:   test
   main-is:          Main.hs
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-tool-depends:
+    ormolu:ormolu
   build-depends:
     , base
+    , aeson
+    , containers
     , filepath
     , hls-ormolu-plugin
+    , hls-plugin-api
     , hls-test-utils     == 2.2.0.0
     , lsp-types
     , text
