Migrate hls-eval-plugin to new FileSystem infrastructure
Set ups a test project per file in a temporary directory.
Speeds up test cases quite a when no cabal invocation is required or
desired.

Additionally, reduces flakiness since HLS often loads only a single file
then.

Proof of concept s.t. other flaky plugin test suites can be migrated
later as well.

--- a/plugins/hls-eval-plugin/hls-eval-plugin.cabal
+++ b/plugins/hls-eval-plugin/hls-eval-plugin.cabal
@@ -20,8 +20,8 @@ extra-source-files:
   LICENSE
   README.md
   test/cabal.project
-  test/info-util/*.cabal
-  test/info-util/*.hs
+  test/testdata/info-util/*.cabal
+  test/testdata/info-util/*.hs
   test/testdata/*.cabal
   test/testdata/*.hs
   test/testdata/*.lhs
