--- a/.github/workflows/flags.yml
+++ b/.github/workflows/flags.yml
@@ -75,8 +75,8 @@ jobs:
       - name: Build `ghcide` with flags
         run: cabal v2-build ghcide --flags="ghc-patched-unboxed-bytecode test-exe executable bench-exe ekg"
 
-      # we have to clean up warnings for 9.0 and 9.2 before enable -Wall
-      - if: matrix.ghc != '9.0' && matrix.ghc != '9.2'
+      # wingman fails with flags on 9.0, so this can be removed when that's gone
+      - if: matrix.ghc != '9.0'
         name: Build with pedantic (-WError)
         run: cabal v2-build --flags="pedantic"
 
