ignore incomplete record updates in explicit record fields

--- a/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
+++ b/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
@@ -52,6 +52,7 @@ library
 
   if flag(pedantic)
     ghc-options: -Werror
+                 -Wwarn=incomplete-record-updates
     
 test-suite tests
     import:           warnings
