--- a/ghcide/ghcide.cabal
+++ b/ghcide/ghcide.cabal
@@ -193,6 +193,7 @@ library
         Development.IDE.LSP.Outline
         Development.IDE.LSP.Server
         Development.IDE.Session
+        Development.IDE.Session.Diagnostics
         Development.IDE.Spans.Common
         Development.IDE.Spans.Documentation
         Development.IDE.Spans.AtPoint
