--- a/plugins/hls-explicit-imports-plugin/test/testdata/hie.yaml
+++ b/plugins/hls-explicit-imports-plugin/test/testdata/hie.yaml
@@ -9,6 +9,7 @@ cradle:
     - ExplicitB.hs
     - RefineUsualCase.hs
     - RefineQualified.hs
+    - RefineQualifiedExplicit.hs
     - RefineWithOverride.hs
     - RefineA.hs
     - RefineB.hs
