--- a/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
+++ b/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-fourmolu-plugin
-version:            2.2.0.0
+version:            2.3.0.0
 synopsis:           Integration with the Fourmolu code formatter
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -33,8 +33,8 @@ library
     , filepath
     , ghc
     , ghc-boot-th
-    , ghcide          == 2.2.0.0
-    , hls-plugin-api  == 2.2.0.0
+    , ghcide          == 2.3.0.0
+    , hls-plugin-api  == 2.3.0.0
     , lens
     , lsp
     , mtl
@@ -47,7 +47,7 @@ library
   elif impl(ghc >= 9.2) && impl(ghc < 9.8)
     build-depends: fourmolu ^>= 0.14
   else
-    buildable: false
+    buildable: False
 
   -- fourmolu 0.9.0 fails to build on Windows CI for reasons unknown
   if impl(ghc >= 9.2) && os(windows) && impl(ghc < 9.4)
@@ -64,11 +64,11 @@ test-suite tests
   build-tool-depends:
     fourmolu:fourmolu
   build-depends:
-    , base
+    , base            >=4.12 && <5
     , aeson
     , containers
     , filepath
     , hls-fourmolu-plugin
     , hls-plugin-api
-    , hls-test-utils       == 2.2.0.0
+    , hls-test-utils       == 2.3.0.0
     , lsp-test
