Simplify cabal.project
- entropy has had bounds revised in
- basement/hw-prim bounds empirically unnecessariy
- hyphenation was for wingman
- bound hlint to a version that uses ghc-lib by default
- stylish-haskell has never had a ghc-lib flag
- none of the versions of fourmolu that we use have a fixity-th flag
- remove some other things that lack justification speculatively

--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -570,6 +570,9 @@ test-suite wrapper-test
   main-is:            Main.hs
 
 benchmark benchmark
+    -- Depends on shake-bench which is unbuildable after this point
+    if impl(ghc >= 9.5)
+      buildable: False
     type: exitcode-stdio-1.0
     default-language: Haskell2010
     ghc-options: -Wall -Wno-name-shadowing -threaded
