--- a/cabal.project
+++ b/cabal.project
@@ -34,47 +34,26 @@ packages:
          ./plugins/hls-refactor-plugin
          ./plugins/hls-overloaded-record-dot-plugin
 
--- Standard location for temporary packages needed for particular environments
--- For example it is used in the project gitlab mirror to help in the MAcOS M1 build script
--- See https://github.com/haskell/haskell-language-server/blob/master/.gitlab-ci.yml
-optional-packages: vendored/*/*.cabal
+index-state: 2023-10-06T06:12:29Z
 
 tests: True
+test-show-details: direct
 
--- mfsolve has duplicate instances in its test suite
--- See: https://github.com/kuribas/mfsolve/issues/8
-package mfsolve
-  tests: False
-
-package *
-  ghc-options: -haddock
-  test-show-details: direct
+benchmarks: True
 
 write-ghc-environment-files: never
 
-index-state: 2023-10-06T06:12:29Z
+-- Make sure dependencies are build with haddock so we get
+-- haddock shown on hover
+package *
+  ghc-options: -haddock
 
 constraints:
   -- C++ is hard to distribute, especially on older GHCs
   -- See https://github.com/haskell/haskell-language-server/issues/3822
   text -simdutf,
-  -- For GHC 9.4, older versions of entropy fail to build on Windows
-  entropy >= 0.4.1.10,
-  -- For GHC 9.4
-  basement >= 0.0.15,
-  -- For GHC 9.4
-  hw-prim >= 0.6.3.2,
-  hyphenation +embed,
-  -- remove this when hlint sets ghc-lib to true by default
-  -- https://github.com/ndmitchell/hlint/issues/1376
-  hlint +ghc-lib,
   ghc-check -ghc-check-use-package-abis,
   ghc-lib-parser-ex -auto,
-  stylish-haskell +ghc-lib,
-  fourmolu -fixity-th,
-  setup.happy == 1.20.1.1,
-  happy == 1.20.1.1,
-  filepath installed,
   -- Centos 7 comes with an old gcc version that doesn't know about
   -- the flag '-fopen-simd', which blocked the release 2.2.0.0.
   -- We want to be able to benefit from the performance optimisations
@@ -94,20 +73,17 @@ source-repository-package
   tag: 7a0af7a8fd38045fd15fb13445bdcc7085325460
 -- END DELETE
 
-allow-newer:
-  -- ghc-9.4
-  ekg-json:base,
-  ekg-wai:time,
-
-if impl(ghc >= 9.5)
+if impl(ghc >= 9.1)
+  -- ekg packagess are old and unmaintained, but we 
+  -- don't rely on them for the mainline build, so 
+  -- this is okay
   allow-newer:
-    -- ghc-9.6
-    ekg-core:ghc-prim,
-    stm-hamt:transformers,
+    ekg-json:base,
+    ekg-wai:time,
+    ekg-core:ghc-prim
 
 if impl(ghc >= 9.7)
   allow-newer:
-    -- ghc-9.8
     base,
     template-haskell,
     ghc,
@@ -122,7 +98,6 @@ if impl(ghc >= 9.7)
     unix,
     deepseq,
 
-if impl(ghc >= 9.7)
   repository head.hackage.ghc.haskell.org
      url: https://ghc.gitlab.haskell.org/head.hackage/
      secure: True
