--- a/plugins/hls-hlint-plugin/hls-hlint-plugin.cabal
+++ b/plugins/hls-hlint-plugin/hls-hlint-plugin.cabal
@@ -52,7 +52,7 @@ library
     , ghc-exactprint        >=0.6.3.4
     , ghcide                == 2.4.0.0
     , hashable
-    , hlint                 < 3.7
+    , hlint                 >= 3.5 && < 3.7
     , hls-plugin-api        == 2.4.0.0
     , lens
     , lsp
