--- a/.github/actions/setup-build/action.yml
+++ b/.github/actions/setup-build/action.yml
@@ -66,10 +66,10 @@ runs:
 
     - name: Retrieving `cabal.project` Hackage timestamp
       run: |
-        # Form: index-state: 2021-11-29T08:11:08Z
+        # Form: index-state: repository 2021-11-29T08:11:08Z
         INDEX_STATE_ENTRY=$(grep index-state cabal.project)
         # Form: 2021-11-29T08-11-08Z
-        INDEX_STATE1=$(echo "$INDEX_STATE_ENTRY" | cut -d' ' -f2 | tr ':' '-')
+        INDEX_STATE1=$(echo "$INDEX_STATE_ENTRY" | cut -d' ' -f3 | tr ':' '-')
         echo "INDEX_STATE=$INDEX_STATE1" >> $GITHUB_ENV
       shell: bash
 
