--- a/cabal.project
+++ b/cabal.project
@@ -34,7 +34,7 @@ packages:
          ./plugins/hls-refactor-plugin
          ./plugins/hls-overloaded-record-dot-plugin
 
-index-state: 2023-10-06T06:12:29Z
+index-state: 2023-11-13T12:07:58Z
 
 tests: True
 test-show-details: direct
@@ -84,27 +84,14 @@ if impl(ghc >= 9.1)
 
 if impl(ghc >= 9.7)
   allow-newer:
-    base,
-    template-haskell,
-    ghc,
-    ghc-prim,
-    integer-gmp,
-    ghc-bignum,
-    template-haskell,
-    text,
-    binary,
-    bytestring,
-    Cabal,
-    unix,
-    deepseq,
-
-  repository head.hackage.ghc.haskell.org
-     url: https://ghc.gitlab.haskell.org/head.hackage/
-     secure: True
-     key-threshold: 3
-     root-keys:
-         f76d08be13e9a61a377a85e2fb63f4c5435d40f8feb3e12eb05905edb8cdea89
-         26021a13b401500c8eb2761ca95c61f2d625bfef951b939a8124ed12ecf07329
-         7541f32a4ccca4f97aea3b22f5e593ba2c0267546016b992dfadcd2fe944e55d
-
-  active-repositories: hackage.haskell.org, head.hackage.ghc.haskell.org
+    ekg-core:text,
+    ghc-trace-events:base,
+    ghc-trace-events:bytestring,
+    ghc-trace-events:text,
+    primitive-unlifted:bytestring,
+    constraints-extras:base,
+    constraints-extras:template-haskell,
+    commutative-semigroups:base,
+    commutative-semigroups:template-haskell,
+    generic-lens:text,
+    generic-lens-core:text,
