Set it in the stack config not the cabal config

--- a/stack-lts21.yaml
+++ b/stack-lts21.yaml
@@ -65,6 +65,8 @@ configure-options:
 flags:
   haskell-language-server:
     pedantic: true
+  stylish-haskell:
+    ghc-lib: true
   retrie:
     BuildExecutable: false
 
