--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -159,6 +159,10 @@ jobs:
         name: Test hls-splice-plugin
         run: cabal test hls-splice-plugin --test-options="$TEST_OPTS" || cabal test hls-splice-plugin --test-options="$TEST_OPTS"
 
+      - if: matrix.test && matrix.ghc != '9.2' && !startsWith(matrix.ghc,'9.8')
+        name: Test hls-stan-plugin
+        run: cabal test hls-stan-plugin --test-options="$TEST_OPTS" || cabal test hls-stan-plugin --test-options="$TEST_OPTS"
+
       - if: matrix.test && !startsWith(matrix.ghc,'9.8')
         name: Test hls-stylish-haskell-plugin
         run: cabal test hls-stylish-haskell-plugin --test-options="$TEST_OPTS" || cabal test hls-stylish-haskell-plugin --test-options="$TEST_OPTS"
