--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,4 @@
-resolver: nightly-2023-07-10 # ghc-9.6.2
+resolver: nightly-2023-12-06 # ghc-9.6.2
 
 packages:
   - .
@@ -35,6 +35,7 @@ packages:
   - ./plugins/hls-splice-plugin
   - ./plugins/hls-stan-plugin
   - ./plugins/hls-stylish-haskell-plugin
+  - ./plugins/hls-semantic-tokens-plugin
 
 ghc-options:
   "$everything": -haddock
