--- a/stack.yaml
+++ b/stack.yaml
@@ -56,6 +56,8 @@ extra-deps:
 - lsp-test-0.16.0.1
 - lsp-types-2.1.0.0
 - monad-dijkstra-0.1.1.4
+- attoparsec-aeson-2.2.0.1
+- integer-conversion-0.1.0.1
 
 # stan dependencies not found in the stackage snapshot
 - stan-0.1.0.2
